# kinect-driver

./: CMakeLists.txt
src/: main.cpp
